# TokenCUNT

./: .gitignore  04-03-prompt-diff-SUMMARY.md  LICENCE  PLAN.md  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-core-engine/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-core-api-client-SUMMARY.md  01-core-budget-session-SUMMARY.md  01-core-token-counter-SUMMARY.md
.planning/phases/02-cli-tool/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md
.planning/phases/04-advanced-features/: 04-04-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/tokencunt/: config.py
src/tokencunt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tokencunt/cli/: __init__.py  app.py  exit_codes.py  formatters.py  logo.py
src/tokencunt/cli/commands/: __init__.py  analyze.py  ask.py  batch.py  diff.py  optimize.py  report.py  scan.py  session.py  simulate.py
src/tokencunt/core/: __init__.py  api_client.py  batcher.py  budget.py  differ.py  exceptions.py  optimizer.py  prompt_optimizer.py  scanner.py  session.py  simulator.py  token_counter.py
tokencunt-vscode/: package-lock.json  package.json  tokencunt-0.1.0.vsix  tsconfig.json
tokencunt-vscode/src/: alerts.ts  cli.ts  commands.ts  extension.ts  hover.ts  setup-webview.ts  statusbar.ts
