[project]
name = "tokencunt"
version = "1.0.0"
description = "Token counting and budget management for MiniMax API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
ts = "tokencunt.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
cli = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
